--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="end" type="push" contentId="main">
+    <ion-header>
+      <ion-toolbar color="warning">
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item routerLink="home">
+          <ion-icon name="home" size="small" slot="start"></ion-icon>
+          <ion-label> Home</ion-label>
+        </ion-item>
+        <ion-item routerLink="servicios">
+          <ion-icon name="bicycle" size="small" slot="start"></ion-icon>
+          <ion-label> Servicios</ion-label>
+        </ion-item>
+        <ion-item routerLink="instructores">
+          <ion-icon name="person-add" size="small" slot="start"></ion-icon>
+          <ion-label>Instructores</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
