--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content fullscreen="xl">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        Bienvenido al Gym
+      </ion-col>
+      <ion-col>
+        <img src="./assets/img/Gym1.jpeg"  alt="Gimnasio"/>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Nuestro equipo</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            Los gimnasios de Quito y Ecuador estamos listos para la reapertura. Cambiamos la forma de ingresar.
+            Cuando volvamos, por favor acércate a recepción y retira tu llavero para que puedas ingresar a nuestras
+            instalaciones más seguro y libre de contacto por Covid19. El deporte se va activando, entrenar, correr y caminar
+            es seguro con nuestro Protocolo de Bioseguridad, revisado y aprobado por las autoridades. Por favor acceda a éste
+            documento para mayor detalle con el cual los gimnasios abriremos las puertas próximamente.
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
