--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu side="end" type="push" contentId="main">
     <ion-header>
       <ion-toolbar color="warning">
-        <ion-title>Menu</ion-title>
+        <ion-title>Menú</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content>
@@ -11,13 +11,17 @@
           <ion-icon name="home" size="small" slot="start"></ion-icon>
           <ion-label> Home</ion-label>
         </ion-item>
-        <ion-item routerLink="servicios">
+        <!--<ion-item routerLink="servicios">
           <ion-icon name="bicycle" size="small" slot="start"></ion-icon>
           <ion-label> Servicios</ion-label>
-        </ion-item>
+        </ion-item>-->
         <ion-item routerLink="instructores">
-          <ion-icon name="person-add" size="small" slot="start"></ion-icon>
+          <ion-icon name="people" size="small" slot="start"></ion-icon>
           <ion-label>Instructores</ion-label>
+        </ion-item>
+        <ion-item routerLink="formulario">
+          <ion-icon name="calendar" size="small" slot="start"></ion-icon>
+          <ion-label>Reservación</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
