--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header  collapse="condense" [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Gimnasio Unir
+
+    <ion-title color="warning" size="large">
+      Gimnasio UNIR
     </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="toogleMenu()">
-        <ion-icon name="grid"></ion-icon>
+        <ion-icon name="grid" color="warning"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
