--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,9 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" class="ion-text-center">
-        Bienvenido al Gym
+        <ion-text>
+          <h3><ion-icon name="barbell"></ion-icon> Bienvenido al Gym</h3>
+        </ion-text>
       </ion-col>
       <ion-col>
         <img src="./assets/img/Gym1.jpeg"  alt="Gimnasio"/>
