--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<ion-header  collapse="condense" [translucent]="true">
+<ion-header [translucent]="true">
   <ion-toolbar>
 
     <ion-title color="warning" size="large">
