--- a/src/app/formulario/formulario.page.html
+++ b/src/app/formulario/formulario.page.html
@@ -12,7 +12,7 @@
     </ion-row>
       <ion-row>
       <ion-col>
-        <img src="./assets/img/Gym1.jpeg"  alt="Gimnasio"/>
+        <ion-img src="./assets/img/Gym1.jpeg"></ion-img>
         <ion-list>
           <ion-list-header lines="full">
             <ion-label>Datos personales</ion-label>
@@ -36,22 +36,22 @@
             </ion-list-header>
             <ion-item>
               <ion-label><ion-icon slot="start" name="bonfire"></ion-icon> Condado</ion-label>
-              <ion-radio slot="end" value="condado"></ion-radio>
+              <ion-radio slot="end" value="condado" color="warning"></ion-radio>
             </ion-item>
 
             <ion-item>
               <ion-label><ion-icon slot="start" name="leaf"></ion-icon> El Bosque</ion-label>
-              <ion-radio slot="end" value="bosque"></ion-radio>
+              <ion-radio slot="end" value="bosque" color="warning"></ion-radio>
             </ion-item>
 
             <ion-item>
               <ion-label><ion-icon slot="start" name="bug"></ion-icon> Carapungo</ion-label>
-              <ion-radio slot="end" value="carapungo"></ion-radio>
+              <ion-radio slot="end" value="carapungo" color="warning"></ion-radio>
             </ion-item>
 
             <ion-item>
               <ion-label><ion-icon slot="start" name="dice"></ion-icon> Quicentro</ion-label>
-              <ion-radio slot="end" value="quicentro"></ion-radio>
+              <ion-radio slot="end" value="quicentro" color="warning"></ion-radio>
             </ion-item>
           </ion-radio-group>
 
@@ -94,7 +94,7 @@
           </ion-card-content>
           <ion-item lines="none">
             <ion-label>Acepto las condiciones</ion-label>
-            <ion-checkbox slot="start"></ion-checkbox>
+            <ion-checkbox slot="start" color="warning"></ion-checkbox>
           </ion-item>
 
         </ion-card>
