--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
         </ion-text>
       </ion-col>
       <ion-col>
-        <img src="./assets/img/Gym1.jpeg"  alt="Gimnasio"/>
+        <ion-img src="./assets/img/Gym1.jpeg"></ion-img>
         <ion-card>
           <ion-card-header>
             <ion-card-title>Nuestro equipo</ion-card-title>
@@ -24,5 +24,49 @@
         </ion-card>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col>
+        <h2 class="ion-text-center">Contamos con profesionales de excellencia</h2>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="8">
+        <ion-list>
+          <ion-item>
+            <ion-avatar slot="end">
+              <img src="./assets/img/Jimena.jpeg">
+            </ion-avatar>
+            <ion-label>
+              <h3>JIMENA CHALA</h3>
+              <p>TRAINNER</p>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-avatar slot="end">
+              <img src="./assets/img/Carlos.jpeg">
+            </ion-avatar>
+            <ion-label>
+              <h3>CARLOS PÉREZ</h3>
+              <p>TRAINNER</p>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-avatar slot="end">
+              <img src="./assets/img/Maria.jpeg">
+            </ion-avatar>
+            <ion-label>
+              <h3>MARÍA RAMOS</h3>
+              <p>TRAINNER</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title class="ion-text-center" color="warning" size="small">Trabajo Grupo 3</ion-title>
+  </ion-toolbar>
+</ion-footer>
