--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <h2 class="ion-text-center">Contamos con profesionales de excellencia</h2>
+        <h2 class="ion-text-center">Contamos con los mejores profesionales</h2>
       </ion-col>
     </ion-row>
     <ion-row class="ion-justify-content-center">
